Bug 853075 - Remove workarounds. r=tschneidereit